# fiatprices

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
src/: api.rs  args.rs  db.rs  exporter.rs  fetch.rs  main.rs  metrics.rs  telemetry.rs
