[package]
name = "fiatprices"
version = "0.1.0"
authors = ["EnormousCloud <enormous@webcerebrium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = [ "chrono", "postgres", "runtime-async-std-rustls", "bigdecimal" ] }
async-std = { version = "1.8", features = [ "attributes" ] }
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
dotenv = "0.15"
ureq = { version = "2.1", features = ["json", "charset"] }
env_logger = { version = "0.8" }
lazy_static = "^1.4"
chrono = { version = "0.4" }
structopt = { version = "0.3", default-features = false }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
rand = { version = "0.8" }
regex = { version = "1.5" }
bigdecimal = { version = "0.2" }
cached = { version = "0.23" }
prometheus = { version = "0.13", default-features = false }